# rust-bot

./: Cargo.toml
src/: helper_fuctions.rs  main.rs  market_data.rs
src/modules/: mod.rs  trading_bot.rs
src/modules/trading_platforms/: binance.rs
