[package]
name = "trading_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.37.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
rand = "0.8.5"
reqwest = {version = "0.12.4", features = ["json"] }